Fix width on mobile

--- a/src/scss/kodhus/_dialog.scss
+++ b/src/scss/kodhus/_dialog.scss
@@ -39,6 +39,9 @@
     background: var(--color-bg);
     border-radius: 3px;
     width: 560px;
+    @media screen and (max-width: 768px) {
+      width: 94%;
+    }
     min-height: 40px;
     box-shadow: 0 11px 15px -7px rgba(0, 0, 0, 0.2),
       0 24px 38px 3px rgba(0, 0, 0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12);
